print statements complete - still need to finish accuracy()

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -422,9 +422,12 @@
     "        #TODO track cost\n",
     "        cost_tracker[10000-epoch] = cost\n",
     "        \n",
+    "        if epoch % 100 == 0:\n",
+    "            print(\"epoch \"+10000-epoch+\": \"+cost)\n",
+    "            \n",
     "        #iterate to next epoch\n",
     "        epoch-=1\n",
-    "    \n",
+    "        \n",
     "    #TODO print final cost or costs AND plot graph of costs x iterations\n",
     "    \n",
     "    print(\"final cost: \"+cost)\n",
@@ -460,7 +463,10 @@
     "    \n",
     "    \n",
     "def accuracy(predictions, labels, show_wrong=3):\n",
-    "    #TODO show accuracy and images that are incorrectly classified - default 3 from each class"
+    "    \n",
+    "    accuracy = float((np.dot(Y,LR_predictions) + np.dot(1-Y,1-LR_predictions))/float(Y.size)*100)\n",
+    "    \n",
+    "    return accuracy, false_pos_indices, false_neg_indices\n"
    ]
   },
   {
@@ -470,13 +476,45 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "parameters = model(train_pos_dset, train_neg_dset, mini_batch_size =32, layers = [2,5,5,1], epochs = 10000, print_cost=False, learning_rate=0.005)\n",
-    "predictions_on_pos, predictions_on_neg = prediction(train_pos_dset, train_neg_dset, parameters, layers = [2,5,5,1])\n",
-    "predictions_on_pos, predictions_on_neg = prediction(val_pos_dset, val_neg_dset, parameters, layers = [2,5,5,1])\n",
-    "predictions_on_pos, predictions_on_neg = prediction(test_pos_dset, test_neg_dset, parameters, layers = [2,5,5,1])\n",
-    "accuracy()\n",
-    "f.close()"
+    "\n",
+    "train_predictions_on_pos, train_predictions_on_neg = prediction(train_pos_dset, train_neg_dset, parameters, layers = [2,5,5,1])\n",
+    "val_predictions_on_pos, val_predictions_on_neg = prediction(val_pos_dset, val_neg_dset, parameters, layers = [2,5,5,1])\n",
+    "#test_predictions_on_pos, test_predictions_on_neg = prediction(test_pos_dset, test_neg_dset, parameters, layers = [2,5,5,1])\n",
+    "\n",
+    "train_accuracy, train_false_pos_indices, train_false_neg_indices = accuracy(train_predictions_on_pos, train_predictions_on_neg, show_wrong=3)\n",
+    "val_accuracy, val_false_pos_indices, val_false_neg_indices = accuracy(val_predictions_on_pos, val_predictions_on_neg, show_wrong=3)\n",
+    "\n",
+    "print(\"Training Accuracy: \"+train_accuracy)\n",
+    "print(\"Validation Accuracy: \"+val_accuracy)\n",
+    "\n",
+    "\n",
+    "for index_set in [train_false_pos_indices, train_false_neg_indices, val_false_pos_indices, val_false_neg_indices]:\n",
+    "    if index_set == train_false_pos_indices:\n",
+    "        print(\"False Positives from Training Set: \")\n",
+    "    elif index_set == train_false_neg_indices:\n",
+    "        print(\"False Negatives from Training Set: \")\n",
+    "    elif index_set == val_false_pos_indices:\n",
+    "        print(\"False Positives from Validation Set: \")\n",
+    "    elif index_set == val_false_neg_indices:\n",
+    "        print(\"False Negatives from Validation Set: \")\n",
+    "    else:\n",
+    "        print(\"error printing false prediction images\")\n",
+    "        \n",
+    "    for index in index_set:\n",
+    "        orig_image = np.uint8((np.round(mydset[index].reshape(128,128,3) * 255.0)).astype(int))\n",
+    "        pyplot.imshow(orig_image)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "f.close()\n"
    ]
   }
  ],
