finished coding - running and debugging

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -449,22 +449,52 @@
     "\n",
     "def prediction(pos_dset, neg_dset, parameters, layers):\n",
     "    predictions_on_pos = np.empty([pos_dset.shape[0],1])\n",
-    "    predictions_on_neg = np.empty([pos_dset.shape[1],1])\n",
+    "    predictions_on_neg = np.empty([neg_dset.shape[0],1])\n",
     "    \n",
     "    for pos in range(pos_dset.shape[0]):\n",
-    "        predictions_on_pos[pos] = forward_prop(parameters, pos_dset[pos].transpose(), layers)\n",
-    "    \n",
+    "        Z, A, G = forward_prop(parameters, pos_dset[pos].transpose(), layers)\n",
+    "        predictions_on_pos[pos] = round(A[-1][0][0])\n",
+    "        #might not need indices here\n",
+    "        \n",
     "    for neg in range(neg_dset.shape[0]):\n",
-    "        predictions_on_neg[neg] = forward_prop(parameters, neg_dset[neg].transpose(), layers)\n",
-    "    \n",
+    "        Z, A, G = forward_prop(parameters, neg_dset[neg].transpose(), layers)\n",
+    "        predictions_on_neg[neg] = round(A[-1][0][0])\n",
     "    \n",
     "    return predictions_on_pos, predictions_on_neg\n",
     "    \n",
     "    \n",
     "    \n",
-    "def accuracy(predictions, labels, show_wrong=3):\n",
+    "def accuracy(predictions_on_pos, predictions_on_neg, show_wrong=3):\n",
     "    \n",
-    "    accuracy = float((np.dot(Y,LR_predictions) + np.dot(1-Y,1-LR_predictions))/float(Y.size)*100)\n",
+    "    pos_labels = np.ones(predictions_on_pos.shape[0],1)\n",
+    "    neg_labels = np.zeroes(predictions_on_neg.shape[0],1)\n",
+    "    accuracy = float((np.dot(pos_labels,predictions_on_pos) + np.dot(1-neg_labels,1-predictions_on_neg))/float(predictions_on_neg.shape[0]+predictions_on_pos.shape[0])*100)\n",
+    "    \n",
+    "    false_pos = pos_labels-predictions_on_pos\n",
+    "    false_neg = neg_labels-predictions_on_neg\n",
+    "    \n",
+    "    false_pos_indices = []\n",
+    "    false_neg_indices = []\n",
+    "    \n",
+    "    counter= 0\n",
+    "    x = 0\n",
+    "    while x < false_pos.shape[0] and counter< show_wrong:\n",
+    "        if false_pos[x] != 0:\n",
+    "            false_pos_indices.append(x)\n",
+    "            counter+=1\n",
+    "        else:\n",
+    "        x+=1\n",
+    "        \n",
+    "        \n",
+    "    counter= 0\n",
+    "    x = 0\n",
+    "    while x < false_neg.shape[0] and counter< show_wrong:\n",
+    "        if false_neg[x] != 0:\n",
+    "            false_neg_indices.append(x)\n",
+    "            counter+=1\n",
+    "        else:\n",
+    "        x+=1\n",
+    "    \n",
     "    \n",
     "    return accuracy, false_pos_indices, false_neg_indices\n"
    ]
@@ -504,13 +534,6 @@
     "    for index in index_set:\n",
     "        orig_image = np.uint8((np.round(mydset[index].reshape(128,128,3) * 255.0)).astype(int))\n",
     "        pyplot.imshow(orig_image)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
