typos fixed - fixing cost function - minibatch creation num pos num neg needs to be passed as a param?

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +118,8 @@
     "        else:\n",
     "            W.append(np.random.rand(layers[x],layers[x-1]))\n",
     "            \n",
-    "        B.append(np.zeroes(layers[x],1))\n",
-    "        x+=1\n",
+    "        B.append(np.zeros((layers[x],1)))\n",
+    "        x += 1\n",
     "            \n",
     "    parameters = {\"W\":W,\n",
     "                  \"B\":B}\n",
@@ -128,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mini_batch(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
+    "def mini_batch(train_neg_index_list, train_pos_index_list, mini_batch_size, num_train_pos, num_train_neg):\n",
     "    #list of indices for a given mini-batch (used to access the images for this mini-batch from the dataset)\n",
     "    pos_mini_batches = []\n",
     "    neg_mini_batches = []\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
     "        labels[counter] = 1\n",
     "        counter+=1  \n",
     "            \n",
-    "    if counter not == mini_batch_size:\n",
+    "    if counter != mini_batch_size:\n",
     "        print(\"error: batch size - mini batch indices mismatch\")\n",
     "    \n",
     "    return features.transpose(), labels.transpose()"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
     "    G = []\n",
     "    for layer in range(len(layers)):\n",
     "        \n",
-    "        A_last_layer = np.zeroes([1,1])\n",
+    "        A_last_layer = np.zeros((1,1))\n",
     "        \n",
     "        if layer==0:\n",
     "            A_last_layer = features\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
     "    for layer in reversed(range(len(layers))):\n",
     "        \n",
     "        \n",
-    "        A_last_layer = np.zeroes([1,1])\n",
+    "        A_last_layer = np.zeros((1,1))\n",
     "        \n",
     "        \n",
     "        if layer == 0:\n",
@@ -322,7 +322,7 @@
     "        else:\n",
     "            #TODO implement variable for G that can change depending on layer\n",
     "            #for now, we know all the hidden layers use leaky relu so we'll directly use that derivative\n",
-    "            dZ_current_layer = np.dot(parameters[W][layer+1].transpose(), dZ[len(layers)-1-layer-1]) * leaky_relu_derivative(Z[layer])\n",
+    "            dZ_current_layer = np.dot(parameters['W'][layer+1].transpose(), dZ[len(layers)-1-layer-1]) * leaky_relu_derivative(Z[layer])\n",
     "            dW_current_layer = (1/mini_batch_size)*np.dot(dZ_current_layer, A_last_layer.transpose())\n",
     "            db_current_layer = (1/mini_batch_size)*np.sum(dZ_current_layer, axis=1, keepdims=True)\n",
     "        \n",
@@ -345,33 +345,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_cost(A, labels, mini_batch_size):\n",
-    "     \n",
-    "    cost = -1/mini_batch_size*np.sum(np.multiply(np.log(A[-1]),labels)+np.multiply(np.log(1-A[-1]),1-labels))\n",
-    "               \n",
+    "    print('lastA')\n",
+    "    print(A[-1])\n",
+    "    print('labels:')\n",
+    "    print(labels)\n",
+    "    \n",
+    "    cost =(np.multiply(np.log(A[-1]),labels))\n",
+    "    #cost = (-1/mini_batch_size)*np.sum(np.multiply(np.log(A[-1]),labels) + np.multiply(np.log(1-A[-1]),1-labels))\n",
+    "    #cost = (-1/mini_batch_size)*np.sum( + np.multiply(np.log(1-A[-1]),1-labels))\n",
+    "    print(C)\n",
+    "    print(cost)\n",
     "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size):\n",
     "        \n",
     "    Z, A, G = forward_prop(parameters, features, layers)\n",
     "    cost = compute_cost(A,labels, mini_batch_size)\n",
-    "    updates = back_prop(paramaters, features, labels, layers, Z, A, G, mini_batch_size)\n",
+    "    updates = back_prop(parameters, features, labels, layers, Z, A, G, mini_batch_size)\n",
     "    \n",
     "    #update the parameters \n",
-    "    for layer in range(len(parameter[W])):\n",
-    "        parameter[W][layer] = parameter[W][layer] - learning_rate * updates[dW][layer]\n",
-    "        parameter[B][layer] = parameter[B][layer] - learning_rate * updates[db][layer]\n",
+    "    for layer in range(len(parameters['W'])):\n",
+    "        parameters['W'][layer] = parameters['W'][layer] - learning_rate * updates['dW'][layer]\n",
+    "        parameters['B'][layer] = parameters['B'][layer] - learning_rate * updates['db'][layer]\n",
     "    \n",
     "    #code here if we want to track or print cost after every mini-batch\n",
     "    \n",
@@ -380,30 +391,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "        \n",
     "def model(train_pos_dset, train_neg_dset, mini_batch_size =32, layers = [1], epochs = 10000, print_cost=False, learning_rate=0.005):\n",
     "    \n",
     "    #lets us track cost and later graph it\n",
-    "    cost_tracker = np.zeroes([1000])\n",
+    "    cost_tracker = np.zeros((1000))\n",
     "    cost = 0\n",
     "    \n",
     "    num_train_neg, num_train_pos, num_features, train_neg_index_list, train_pos_index_list = training_info(train_pos_dset, train_neg_dset)\n",
     "    \n",
-    "    parameters = intialize(layers, num_features)\n",
+    "    parameters = initialize(layers, num_features)\n",
     "    \n",
     "    #iterate through all the epochs\n",
-    "    while epoch>0:\n",
+    "    while epochs>0:\n",
     "\n",
     "        #shuffle the lists of indices, effectively shuffling the training instances among the mini-batches \n",
     "        random.shuffle(train_neg_index_list)\n",
     "        random.shuffle(train_pos_index_list)\n",
     "        \n",
     "        #neg_mini_batches and pos_mini_batches are lists of lists of indices pointing to training instances\n",
-    "        neg_mini_batches, pos_mini_batches = mini_batch(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
+    "        neg_mini_batches, pos_mini_batches = mini_batch(train_neg_index_list,train_pos_index_list,mini_batch_size, num_train_pos, num_train_neg)\n",
     "        \n",
     "        #iterate through all the mini-batches (e.g. neg_indices contains the indices of a single mini-batch of negative class training instances)\n",
     "        for neg_indices, pos_indices in zip(neg_mini_batches, pos_mini_batches):\n",
@@ -420,13 +435,13 @@
     "        #maybe write code for % success at test\n",
     "        \n",
     "        #TODO track cost\n",
-    "        cost_tracker[10000-epoch] = cost\n",
+    "        cost_tracker[10000-epochs] = cost\n",
     "        \n",
-    "        if epoch % 100 == 0:\n",
-    "            print(\"epoch \"+10000-epoch+\": \"+cost)\n",
+    "        if epochs % 100 == 0:\n",
+    "            print(\"epoch \"+ str(10000-epochs) +\": \"+ cost)\n",
     "            \n",
     "        #iterate to next epoch\n",
-    "        epoch-=1\n",
+    "        epochs-=1\n",
     "        \n",
     "    #TODO print final cost or costs AND plot graph of costs x iterations\n",
     "    \n",
@@ -441,8 +456,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -466,8 +485,8 @@
     "    \n",
     "def accuracy(predictions_on_pos, predictions_on_neg, show_wrong=3):\n",
     "    \n",
-    "    pos_labels = np.ones(predictions_on_pos.shape[0],1)\n",
-    "    neg_labels = np.zeroes(predictions_on_neg.shape[0],1)\n",
+    "    pos_labels = np.ones((predictions_on_pos.shape[0],1))\n",
+    "    neg_labels = np.zeros((predictions_on_neg.shape[0],1))\n",
     "    accuracy = float((np.dot(pos_labels,predictions_on_pos) + np.dot(1-neg_labels,1-predictions_on_neg))/float(predictions_on_neg.shape[0]+predictions_on_pos.shape[0])*100)\n",
     "    \n",
     "    false_pos = pos_labels-predictions_on_pos\n",
@@ -482,7 +501,7 @@
     "        if false_pos[x] != 0:\n",
     "            false_pos_indices.append(x)\n",
     "            counter+=1\n",
-    "        else:\n",
+    "        \n",
     "        x+=1\n",
     "        \n",
     "        \n",
@@ -492,7 +511,7 @@
     "        if false_neg[x] != 0:\n",
     "            false_neg_indices.append(x)\n",
     "            counter+=1\n",
-    "        else:\n",
+    "        \n",
     "        x+=1\n",
     "    \n",
     "    \n",
@@ -501,9 +520,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+      "  1. 1. 1. 1. 1. 1. 1. 1.]]\n"
+     ]
+    },
+    {
+     "ename": "UFuncTypeError",
+     "evalue": "ufunc 'add' did not contain a loop with signature matching types (dtype('<U32'), dtype('<U32')) -> dtype('<U32')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-cd6b2ea77505>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparameters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_pos_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_neg_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprint_cost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.005\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain_predictions_on_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_predictions_on_neg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_pos_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_neg_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mval_predictions_on_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_predictions_on_neg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_pos_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_neg_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#test_predictions_on_pos, test_predictions_on_neg = prediction(test_pos_dset, test_neg_dset, parameters, layers = [2,5,5,1])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-b19a567c0c65>\u001b[0m in \u001b[0;36mmodel\u001b[0;34m(train_pos_dset, train_neg_dset, mini_batch_size, layers, epochs, print_cost, learning_rate)\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;31m#extract feature list and label list from this mini-batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneg_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos_indices\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_neg_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_pos_dset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m             \u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0;31m#maybe also write code for printing cost after each mini batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-353b24a17238>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mforward_prop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mupdates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mback_prop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-4b3957e16144>\u001b[0m in \u001b[0;36mcompute_cost\u001b[0;34m(A, labels, mini_batch_size)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcompute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'labels:'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#cost = (-1/mini_batch_size)*np.sum(np.multiply(np.log(A[-1]),labels) + np.multiply(np.log(1-A[-1]),1-labels))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUFuncTypeError\u001b[0m: ufunc 'add' did not contain a loop with signature matching types (dtype('<U32'), dtype('<U32')) -> dtype('<U32')"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "parameters = model(train_pos_dset, train_neg_dset, mini_batch_size =32, layers = [2,5,5,1], epochs = 10000, print_cost=False, learning_rate=0.005)\n",
@@ -539,6 +585,20 @@
     "\n",
     "f.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
